Fix the wrong color being used in suggested questions message

--- a/src/assets/scss/_components/_suggested-questions.scss
+++ b/src/assets/scss/_components/_suggested-questions.scss
@@ -16,8 +16,6 @@
 		padding: $spacing-md;
 		border-radius: $spacing-xs * 3;
 		border-top-left-radius: $spacing-xs;
-		background: $color-secondary-400;
-		color: $color-neutral-100;
 		font-family: $font-family;
 		font-weight: 400;
 		font-size: 14px;
